[project]
name = "kodepos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "folium>=0.19.4",
    "geojson>=3.2.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "uvicorn>=0.34.0",
]
